--- a/pom.xml
+++ b/pom.xml
@@ -77,10 +77,23 @@
         <directory>src/main/java</directory>
         <includes>
           <include>**/*.properties</include>
+          <include>**/*.svg</include>
           <include>**/*.xul</include>
         </includes>
       </resource>
+
+      <resource>
+        <directory>src/main/resources</directory>
+        <includes>
+          <include>**/*.properties</include>
+          <include>**/*.svg</include>
+          <include>**/*.xul</include>
+        </includes>
+      </resource>
+
     </resources>
+
+
 
     <plugins>
       <plugin>
@@ -143,5 +156,5 @@
 
 
   <groupId>kettle-beam</groupId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>0.0.2-SNAPSHOT</version>
 </project>
