--- a/pom.xml
+++ b/pom.xml
@@ -98,7 +98,11 @@
       <artifactId>kettle-beam-core</artifactId>
       <version>0.0.4-SNAPSHOT</version>
     </dependency>
-
+    <dependency>
+      <groupId>org.apache.beam</groupId>
+      <artifactId>beam-sdks-java-extensions-join-library</artifactId>
+      <version>2.8.0</version>
+    </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -202,6 +206,11 @@
       <dependency>
         <groupId>org.apache.beam</groupId>
         <artifactId>beam-runners-apex</artifactId>
+        <version>2.8.0</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.beam</groupId>
+        <artifactId>beam-sdks-java-extensions-join-library</artifactId>
         <version>2.8.0</version>
       </dependency>
       <dependency>
