--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,20 @@
       <artifactId>beam-sdks-java-extensions-join-library</artifactId>
       <version>2.8.0</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.apache.spark</groupId>
+      <artifactId>spark-core_2.11</artifactId>
+      <version>2.4.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.spark</groupId>
+      <artifactId>spark-streaming_2.11</artifactId>
+      <version>2.4.0</version>
+      <scope>provided</scope>
+    </dependency>
+
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -228,6 +242,20 @@
         <artifactId>auto-service</artifactId>
         <version>1.0-rc4</version>
       </dependency>
+
+      <dependency>
+        <groupId>org.apache.spark</groupId>
+        <artifactId>spark-core_2.12</artifactId>
+        <version>2.4.0</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.spark</groupId>
+        <artifactId>spark-streaming_2.12</artifactId>
+        <version>2.4.0</version>
+        <scope>provided</scope>
+      </dependency>
+
+
       <dependency>
         <groupId>kettle-beam</groupId>
         <artifactId>kettle-beam-core</artifactId>
