--- a/pom.xml
+++ b/pom.xml
@@ -165,6 +165,7 @@
             <configuration>
               <outputDirectory>${project.build.directory}/lib</outputDirectory>
               <excludeScope>provided</excludeScope>
+              <excludeArtifactIds>junit,mockito-all,jackson-core,jackson-annotations,jackson-databind,xercesImpl,xml-apis</excludeArtifactIds>
             </configuration>
           </execution>
         </executions>
@@ -197,6 +198,22 @@
         <groupId>org.apache.beam</groupId>
         <artifactId>beam-sdks-java-core</artifactId>
         <version>${apache-beam-version}</version>
+
+        <exclusions>
+          <exclusion>
+            <groupId>com.fasterxml.jackson.core</groupId> <!-- Exclude Project-D from Project-B -->
+            <artifactId>jackson-core</artifactId>
+          </exclusion>
+          <exclusion>
+            <groupId>com.fasterxml.jackson.core</groupId> <!-- Exclude Project-D from Project-B -->
+            <artifactId>jackson-annotations</artifactId>
+          </exclusion>
+          <exclusion>
+            <groupId>com.fasterxml.jackson.core</groupId> <!-- Exclude Project-D from Project-B -->
+            <artifactId>jackson-databind</artifactId>
+          </exclusion>
+        </exclusions>
+
       </dependency>
       <dependency>
         <groupId>org.apache.beam</groupId>
