--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,12 @@
       <version>${apache-beam-version}</version>
     </dependency>
     <dependency>
+      <groupId>org.apache.beam</groupId>
+      <artifactId>beam-sdks-java-io-hadoop-file-system</artifactId>
+      <version>${apache-beam-version}</version>
+    </dependency>
+
+    <dependency>
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-core_2.11</artifactId>
       <version>2.4.0</version>
@@ -114,7 +120,6 @@
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-streaming_2.11</artifactId>
       <version>2.4.0</version>
-      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>com.google.cloud</groupId>
@@ -250,6 +255,11 @@
         <version>${apache-beam-version}</version>
       </dependency>
       <dependency>
+        <groupId>org.apache.beam</groupId>
+        <artifactId>beam-sdks-java-io-hadoop-file-system</artifactId>
+        <version>${apache-beam-version}</version>
+      </dependency>
+      <dependency>
         <groupId>com.google.cloud</groupId>
         <artifactId>google-cloud-storage</artifactId>
         <version>1.53.0</version>
@@ -273,7 +283,6 @@
         <groupId>org.apache.spark</groupId>
         <artifactId>spark-streaming_2.12</artifactId>
         <version>2.4.0</version>
-        <scope>provided</scope>
       </dependency>
       <dependency>
         <groupId>com.google.cloud</groupId>
