--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
     <mockito-all.version>1.9.5</mockito-all.version>
     <junit.version>4.4</junit.version>
     <apache-beam-version>2.9.0</apache-beam-version>
-    <kettle-beam-version>0.2.0-SNAPSHOT</kettle-beam-version>
+    <kettle-beam-version>0.3.0-SNAPSHOT</kettle-beam-version>
   </properties>
 
   <repositories>
@@ -107,10 +107,19 @@
     </dependency>
     <dependency>
       <groupId>org.apache.beam</groupId>
+      <artifactId>beam-sdks-java-io-hadoop-common</artifactId>
+      <version>${apache-beam-version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.beam</groupId>
       <artifactId>beam-sdks-java-io-hadoop-file-system</artifactId>
       <version>${apache-beam-version}</version>
     </dependency>
-
+    <dependency>
+      <groupId>org.apache.beam</groupId>
+      <artifactId>beam-sdks-java-io-hdfs</artifactId>
+      <version>0.6.0</version>
+    </dependency>
     <dependency>
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-core_2.11</artifactId>
@@ -159,7 +168,6 @@
       </resource>
 
     </resources>
-
 
 
     <plugins>
@@ -256,8 +264,18 @@
       </dependency>
       <dependency>
         <groupId>org.apache.beam</groupId>
+        <artifactId>beam-sdks-java-io-hadoop-common</artifactId>
+        <version>${apache-beam-version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.beam</groupId>
         <artifactId>beam-sdks-java-io-hadoop-file-system</artifactId>
         <version>${apache-beam-version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.beam</groupId>
+        <artifactId>beam-sdks-java-io-hdfs</artifactId>
+        <version>0.6.0</version>
       </dependency>
       <dependency>
         <groupId>com.google.cloud</groupId>
@@ -306,7 +324,6 @@
   </dependencyManagement>
 
 
-
   <groupId>kettle-beam</groupId>
-  <version>0.2.0-SNAPSHOT</version>
+  <version>0.3.0-SNAPSHOT</version>
 </project>
