--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <artifactId>kettle-beam</artifactId>
   <name>Kettle Beam</name>
   <description>Kettle runtime plugins for Apache Beam</description>
-  <version>1.0.1-SNAPSHOT</version>
+  <version>1.0.2</version>
 
   <parent>
     <groupId>org.pentaho</groupId>
@@ -200,6 +200,14 @@
 
 
     <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.22.2</version>
+        <configuration>
+          <argLine>-Xmx2g</argLine>
+        </configuration>
+      </plugin>
       <plugin>
         <artifactId>maven-dependency-plugin</artifactId>
         <executions>
